force-app/main/default/objects/Contact/fields/Approving_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Approving_Nurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approving Nurse</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>