force-app/main/default/objects/Contact/fields/Birthday_Age__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Age__c</fullName>
    <formula>TEXT(DAY( Birthdate ))&amp;&quot;/&quot;&amp;TEXT(MONTH( Birthdate ))&amp;&quot;/&quot;&amp;TEXT(Year( Birthdate ))&amp;&quot; Age: &quot;&amp;TEXT(FLOOR((TODAY() - Birthdate) / 365.25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday &amp; Age</label>
    <type>Text</type>
</CustomField>