force-app/main/default/objects/Contact/fields/Inactive_Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive (Do Not Contact)</label>
    <type>Checkbox</type>
</CustomField>