force-app/main/default/objects/Contact/fields/Is_ART_Treatment_for_Reasons_Other_than__c.field-meta.xml
<CustomField>
    <fullName>Is_ART_Treatment_for_Reasons_Other_than__c</fullName>
    <description>ANZARD LABEL: ART_REASON</description>
    <label>Is Treatment Unrelated to Infertility?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>