force-app/main/default/objects/Contact/fields/Last_Contact_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date_and_Time__c</fullName>
    <label>Last Contact Date and Time</label>
    <type>DateTime</type>
</CustomField>