force-app/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <defaultValue>&quot;Prospecting&quot;</defaultValue>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Cycle Created</fullName>
            </value>
            <value>
                <fullName>Cycle Underway</fullName>
            </value>
            <value>
                <fullName>Pregnant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>