force-app/main/default/objects/Contact/fields/Partner_First_Name_Email_Template_Field__c.field-meta.xml
<CustomField>
    <fullName>Partner_First_Name_Email_Template_Field__c</fullName>
    <formula>Partner__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner First Name (Email Template Field</label>
    <type>Text</type>
</CustomField>