force-app/main/default/objects/Contact/fields/Partner_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Mobile_Number__c</fullName>
    <formula>Partner__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Mobile Number</label>
    <type>Text</type>
</CustomField>