force-app/main/default/objects/Contact/fields/Test_dATE__c.field-meta.xml
<CustomField>
    <fullName>Test_dATE__c</fullName>
    <label>Test dATE</label>
    <type>Date</type>
</CustomField>