force-app/main/default/objects/Contact/recordTypes/External_Contacts.recordType-meta.xml
<RecordType>
    <fullName>External_Contacts</fullName>
    <active>true</active>
    <label>External Contacts</label>
</RecordType>