force-app/main/default/objects/Contact/recordTypes/Unknown_Donor.recordType-meta.xml
<RecordType>
    <fullName>Unknown_Donor</fullName>
    <active>true</active>
    <label>Unknown Donor</label>
</RecordType>