force-app/main/default/objects/Contact/listViews/Address_Book.listView-meta.xml
<ListView>
    <fullName>Address_Book</fullName>
    <columns>FULL_NAME</columns>
    <columns>Age__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>BMI__c</columns>
    <columns>Medicare_Number__c</columns>
    <columns>Eye_Colour__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.External_Contacts</value>
    </filters>
    <label>Address Book</label>
</ListView>