force-app/main/default/objects/Contact/listViews/Patients_Donors_Create.listView-meta.xml
<ListView>
    <fullName>Patients_Donors_Create</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Partner__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.Household_Doctor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Household_Clinic__c</field>
        <operation>contains</operation>
        <value>Create</value>
    </filters>
    <label>Patients &amp; Donors Create</label>
    <sharedTo>
        <group>Create_Fertility</group>
    </sharedTo>
</ListView>