force-app/main/default/objects/Contact/listViews/Patients_Donors_without_NPI.listView-meta.xml
<ListView>
    <fullName>Patients_Donors_without_NPI</fullName>
    <columns>Patient_ID_Display_Formula__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Partner__c</columns>
    <columns>Age__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Mailing_Address__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Medicare_Number__c</columns>
    <columns>Account.Household_Clinic__c</columns>
    <columns>Account.Household_Doctor__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Known_Donor,Contact.Patient,Contact.Unknown_Donor</value>
    </filters>
    <filters>
        <field>Overview_Undertaken__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sex_at_Birth__c</field>
        <operation>equals</operation>
        <value>Female</value>
    </filters>
    <filters>
        <field>Account.Household_Clinic__c</field>
        <operation>contains</operation>
        <value>Create</value>
    </filters>
    <label>Patients &amp; Donors without NPI</label>
    <sharedTo>
        <group>Create_Fertility_Admin</group>
        <group>Create_Fertility_Nursing</group>
    </sharedTo>
</ListView>